# Excel-AgentAi-on-FastApi-server-

./: README.md
ExcelAgentAi/: agent_ai.py  index.html  main.py  pyproject.toml  test_dependencies.py  test_tool.py  tools.py
ExcelAgentAi/Excel Files/: Arkusz67.xlsx  dane_zrodlowe.xlsx  wynik.xlsx
ExcelAgentAi/Testings files/: test_dependencies.py
ExcelAgentAi/processed_files/: ready_user_Arkusz1.xlsx  user_Arkusz1.xlsx
