[project]
name = "excelagentai"
version = "0.1.0"
description = "AI Agent do analizy i generowania plików Excel"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # AI / Agenci
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",
    "openai>=1.40.0",
    # ML
    "transformers>=4.45.0",
    "torch",                        # źródło z indeksu PyTorch (niżej)
    "torchvision",
    # Dane / Excel
    "openpyxl>=3.1.0",              # czytanie/zapis .xlsx
    "xlsxwriter>=3.2.0",            # zaawansowane generowanie Excel
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    # Baza danych
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",              # async PostgreSQL
    "psycopg2-binary>=2.9.0",       # sync PostgreSQL
    # Walidacja
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",     # zmienne środowiskowe (.env)
    # Utils
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "ollama>=0.6.2",
    "langchain-ollama>=1.1.0",
    "python-multipart>=0.0.30",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "aiosqlite>=0.22.1",
]

# --- Źródło PyTorch z CUDA 12.1 ---
[tool.uv]
torch-backend = "cu124"
